# equanime

./: README.md  TODO
eix/: Doxyfile  Makefile.am  configure.ac  eix.pc.in  gendoc
eix/src/: Makefile.am
eix/src/include/: Eix.h  Makefile.am  eix_private.h
eix/src/lib/: Makefile.am  eix.c  eix_client.c  eix_message.c  eix_server.c
enput/: Doxyfile  README  enput.pc.in  gendoc
enput/src/include/: enput_private.h
enput/src/lib/: Makefile.am
enput/src/server/: Makefile.am
enput/src/server/include/: Enput_Server.h
enput/src/server/lib/: Makefile.am  enput_client.c
enput/src/server/modules/: Makefile.am
enput/src/server/modules/evdev/: Makefile.am
equanime/: Doxyfile  Makefile.am  README  TODO  configure.ac  configure.in  equanime.pc.in  gendoc
equanime/data/: equanime.ender
equanime/kernel/common/: Makefile  equ_host.c
equanime/kernel/dm6446/: Makefile  dm6446_media.c
equanime/kernel/mp2530f/: Makefile  mp2530f_rotator.c
equanime/src/: Makefile.am
equanime/src/common/: Makefile.am  equ_format.c  equ_message.c
equanime/src/include/: Equanime.h  Equanime_Module.h  Makefile.am  equ_common.h  equ_component.h  equ_controller.h  equ_core.h  equ_enums.h  equ_host.h  equ_input.h  equ_layer.h  equ_mode.h  equ_output.h  equ_private.h  equ_region.h  equ_surface.h  equ_timing.h  equanime_common.h  equanime_private.h
equanime/src/lib/: Equanime.h  Makefile.am  equ_component.c  equ_controller.c  equ_core.c  equ_csc.c  equ_host.c  equ_input.c  equ_layer.c  equ_mode.c  equ_module.c  equ_output.c  equ_region.c  equ_rotator.c  equ_scaler.c  equ_surface.c  equ_timing.c  equanime_controller.c  equanime_core.c  equanime_layer.c  equanime_module.c  equanime_private.h  equanime_region.c  equanime_surface.c
equanime/src/lib/drivers/: Makefile.am
equanime/src/lib/drivers/dm320/: Makefile.am  controller.c
equanime/src/lib/drivers/dm6446/: Makefile.am  dm6446_controller.c  dm6446_regs.h
equanime/src/lib/drivers/mp2520f/: Makefile.am  mp2520f_controller.c  mp2520f_regs.h
equanime/src/lib/drivers/mp2530f/: Makefile.am  mp2530f_host.c  mp2530f_rotator.c
equanime/src/lib/drivers/mp25xxf/: Makefile.am
equanime/src/lib/drivers/ths8200/: Makefile.am  ths8200.c  ths8200.h
equanime/src/lib/hal/: Makefile.am  hal_dmem.c  hal_i2c.c  hal_uio.c
equanime/src/modules/: Makefile.am
equanime/src/modules/dm320/: Makefile.am  controller.c  dm320_regs.h
equanime/src/modules/dummy/: Makefile.am  module.c
equanime/src/modules/mp25xxf/: Makefile.am  controller.c  cursor.c  mp25xxf.h  mp25xxf_regs.h  osd.c  rgb.c
equanime/src/modules/neuros_osd2/: Makefile.am  neuros_osd2.c
equanime/src/server/: Makefile.am  equ_core.c  equ_csc.c  equ_layer.c  equ_output.c  equ_region.c  equ_server.c
equanime/src/server/drivers/: Makefile.am
equanime/src/server/drivers/dm320/: Makefile.am  controller.c
equanime/src/server/drivers/dm6446/: Makefile.am  dm6446_controller.c
equanime/src/server/drivers/mp2520f/: Makefile.am
equanime/src/server/drivers/mp2530f/: mp2530f_regs.h  mp2530f_rotator.c
equanime/src/server/drivers/ths8200/: Makefile.am
equanime/src/server/hal/: hal_dmem.c  hal_i2c.c  hal_uio.c
equanime/src/server/include/: Equ_Server.h  equ_server_private.h
equanime/src/server/lib/: Makefile.am  equ_client.c  equ_component.c  equ_controller.c  equ_core.c  equ_csc.c  equ_host.c  equ_input.c  equ_layer.c  equ_mode.c  equ_option.c  equ_output.c  equ_pool.c  equ_pool_eshm.c  equ_region.c  equ_rotator.c  equ_scaler.c  equ_surface.c
equanime/src/server/lib/drivers/: Makefile.am
equanime/src/server/lib/drivers/mp2530f/: Makefile.am  mp2530f_host.c
equanime/src/server/lib/drivers/ths7313/: Makefile.am
equanime/src/server/lib/drivers/ths8200/: ths8200.c
equanime/src/server/lib/hal/: Makefile.am  hal_uio.c
equanime/src/server/modules/: Makefile.am
equanime/src/server/modules/dummy/: Makefile.am  module.c
equanime/src/server/modules/neuros_osd2/: Makefile.am  neuros_osd2.c
equanime/src/server/modules/sdl/: Makefile.am  sdl.c
eshm/: AUTHORS  DBUS-SPEC  Doxyfile  Makefile.am  README  configure.ac  eshm.pc.in  gendoc
eshm/examples/: Makefile.am  eshm_client.c
eshm/src/: Makefile.am  config.h.in
eshm/src/common/: Makefile.am  eshm_common.c  eshm_message.c
eshm/src/include/: Eshm.h  Makefile.am  eshm_private.h
eshm/src/lib/: Makefile.am  eshm_main.c  eshm_segment.c
xorg-video-equanime/: Makefile.am  configure.ac
xorg-video-equanime/src/: Makefile.am
