## Process this file with automake to produce Makefile.in

SUBDIRS = src

MAINTAINERCLEANFILES = \
Makefile.in \
aclocal.m4 \
config.guess \
config.sub \
configure \
install-sh \
ltconfig \
ltmain.sh \
missing mkinstalldirs \
stamp-h.in \
build-stamp \
configure-stamp \
depcomp \
eix.pc \
eix_docs.tar.gz

EXTRA_DIST = \
AUTHORS \
COPYING \
gendoc \
Doxyfile \
README \
eix.pc.in

pkgconfigdir = $(libdir)/pkgconfig
pkgconfig_DATA = eix.pc
