MAINTAINERCLEANFILES = Makefile.in

include_HEADERS = \
Equanime.h

ENESIM_UTILHEADERS = \
equ_component.h \
equ_core.h \
equ_host.h \
equ_layer.h \
equ_output.h \
equ_region.h \
equ_common.h \
equ_controller.h \
equ_enums.h \
equ_input.h \
equ_mode.h \
equ_surface.h


installed_headersdir = $(prefix)/include/equanime
installed_headers_DATA = $(ENESIM_UTILHEADERS)
