SUBDIRS = mp25xxf

MAINTAINERCLEANFILES = \
Makefile.in

AM_CPPFLAGS = \
-I. \
-I$(top_srcdir)/src/lib

noinst_LTLIBRARIES = libequanime_modules.la

libequanime_modules_la_SOURCES =

libequanime_modules_la_LIBADD = \
mp25xxf/libequanime_modules_mp25xxf.la

libequanime_modules_la_DEPENDENCIES = \
mp25xxf/libequanime_modules_mp25xxf.la
