MAINTAINERCLEANFILES = Makefile.in

# FIX THIS, the subdirs should be set on AM_COND
#SUBDIRS = \
#mp25xxf \
#mp2520f \
#mp2530f \
#dm320 \
#dm6446 \
#ths8200 \
#ths7313

noinst_LTLIBRARIES = libequ_drivers.la

libequ_drivers_la_SOURCES =

#libequ_drivers_la_DEPENDENCIES = \
#${top_builddir}/src/server/lib/drivers/mp25xxf/libequanime_mp25xxf.la \
#${top_builddir}/src/server/lib/drivers/mp2520f/libequanime_mp2520f.la \
#${top_builddir}/src/server/lib/drivers/mp2530f/libequanime_mp2530f.la \
#${top_builddir}/src/server/lib/drivers/dm320/libequanime_dm320.la \
#${top_builddir}/src/server/lib/drivers/dm6446/libequanime_dm6446.la \
#${top_builddir}/src/server/lib/drivers/ths8200/libequanime_ths8200.la \
#${top_builddir}/src/server/lib/drivers/ths7313/libequanime_ths7313.la

#libequ_drivers_la_LIBADD = \
#${top_builddir}/src/server/lib/drivers/mp25xxf/libequanime_mp25xxf.la \
#${top_builddir}/src/server/lib/drivers/mp2520f/libequanime_mp2520f.la \
#${top_builddir}/src/server/lib/drivers/mp2530f/libequanime_mp2530f.la \
#${top_builddir}/src/server/lib/drivers/dm320/libequanime_dm320.la \
#${top_builddir}/src/server/lib/drivers/dm6446/libequanime_dm6446.la \
#${top_builddir}/src/server/lib/drivers/ths8200/libequanime_ths8200.la \
#${top_builddir}/src/server/lib/drivers/ths7313/libequanime_ths7313.la

