MAINTAINERCLEANFILES = \
Makefile.in

AM_CPPFLAGS = \
-I. \
-I$(top_srcdir)/src/server/include \
-I$(top_srcdir)/src/include \
@EQUANIME_SERVER_CFLAGS@

noinst_LTLIBRARIES = libequanime_mp2530f.la

libequanime_mp2530f_la_SOURCES = \
mp2530f_host.c \
mp2530f_rotator.c

libequanime_mp2530f_la_LIBADD =
